{
    "name": "XinputControls",
    "maps": [
        {
            "name": "Xinput",
            "id": "0f60e938-4fd0-4df7-b609-9d9ac12258c3",
            "actions": [
                {
                    "name": "HorizonMove",
                    "type": "Value",
                    "id": "f3ec8ab9-ecbe-403b-a114-bf541452787d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalMove",
                    "type": "Value",
                    "id": "622daeda-f4b2-4ae1-942f-33f7cf3af2c2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24d4fd77-0d91-4dfc-afb5-561120ca5c42",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizonMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c08e2cf6-4d05-44fc-ae20-d68fd53b34b1",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New Control Scheme",
            "bindingGroup": "New Control Scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}